# dotminecraft

./: Cargo.toml  README.md  README_en.md  SECURITY.md  SPEC.md  deny.toml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  config.rs  grind.rs  keystore.rs  main.rs  tunnel.rs
crates/cli/tests/: agent_control.rs  tunnel_e2e.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  identity.rs  lib.rs  name.rs  record.rs
crates/core/tests/: name.rs  robustness.rs  verify.rs
crates/net/: Cargo.toml
crates/net/src/: behaviour.rs  lib.rs  node.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: name_parse.rs  record_parse.rs
mod/: README.md  build.gradle  gradle.properties  settings.gradle
mod/src/main/java/com/cudgk/mctunnel/: AgentClient.java  AgentLauncher.java  McTunnelMod.java  TunnelPing.java
mod/src/main/java/com/cudgk/mctunnel/mixin/: AddressResolverMixin.java  PingHudMixin.java
mod/src/main/resources/: fabric.mod.json  mc-tunnel.mixins.json
